force-app/main/default/objects/Product2/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>結束日期</label>
    <type>Date</type>
</CustomField>