force-app/main/default/objects/Product2/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IMAGE( PicturePath__c , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>圖片</label>
    <type>Text</type>
</CustomField>