force-app/main/default/objects/Product2/fields/PicturePath__c.field-meta.xml
<CustomField>
    <fullName>PicturePath__c</fullName>
    <label>圖片連結</label>
    <length>200</length>
    <type>Text</type>
</CustomField>