force-app/main/default/objects/Product2/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>開始日期</label>
    <type>Date</type>
</CustomField>